--- a/styles/style.css
+++ b/styles/style.css
@@ -399,6 +399,14 @@ select {
   width: 100%;
 }
 
+.backDrop {
+  width: 90%;
+  position: absolute;
+  top: -10%;
+  bottom: 0;
+  z-index: -10;
+}
+
 .appendedQuotes {
   padding: px 0 50px;
   display: -webkit-box;
@@ -423,4 +431,17 @@ select {
 
 .countdownClock {
   padding: 100px;
+}
+
+.timer {
+  padding: 10px 0 10px 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
